[package]
name = "target_proximity_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
serde_json = "1.0.110"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.79"
